--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<body>
 		<div class="body-wrapper">
 			<h1 class="bold">Gerald</h1>
-			<p>This is gerald. Gerald does cool analytical things. Come try Gerald.</p>
+			<p>Gerald will sum up an Instagram profile in 10 words. Test it out.</p>
 			<input id="searchbar" type="text" class="search-input" onsubmit="search(${this.value})" placeholder="Search"></input>
 			<div id="searchResults">
 			</div>
